--- a/ui/index.html
+++ b/ui/index.html
@@ -1,31 +1,34 @@
-<!doctype html>
 <html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="container">
-            <div class="center">
-                <img src="/ui/madi.png" class="img-medium"/>
-            </div>
-            <h3>About Me</h3>
-            <div>
-                Hi. My name is arasainfo<br/>
-                
-            </div>
-            <hr/>
-            <div id="login_area">
-                <center>Loading login status...</center>
-            </div>
-            <hr/>
-            <h3>My Articles</h3>
-            <div id="articles">
-                <center>Loading articles...</center>
-            </div>
-            <div class="footer">
-            </div>
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
-</html>
+      <head>
+          <title>
+              ${title}
+          </title>
+          <meta name="viewport" content="width=device-width, initial-scale=1" />
+          <link href="/ui/style.css" rel="stylesheet" />
+      </head> 
+      <body>
+          <div class="container">
+              <div>
+                  <a href="/">Home</a>
+              </div>
+              <hr/>
+              <h3>
+                  ${heading}
+              </h3>
+              <div>
+                  ${date.toDateString()}
+              </div>
+              <div>
+                ${content}
+              </div>
+              <hr/>
+              <h4>Comments</h4>
+              <div id="comment_form">
+              </div>
+              <div id="comments">
+                <center>Loading comments...</center>
+              </div>
+          </div>
+          <script type="text/javascript" src="/ui/article.js"></script>
+      </body>
+    </html>
