--- a/ui/index.html
+++ b/ui/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="navbar-collapse collapse" id="myNavbar" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="/articles/article-one">Article One</a> </li>
         <li><a href="#">About</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
