--- a/ui/index.html
+++ b/ui/index.html
@@ -54,8 +54,8 @@
     </div>
     <div class="navbar-collapse collapse" id="myNavbar" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/articles/article-one">Article One</a> </li>
-        <li><a href="#">About</a></li>
+        <li class="active"><a href="#">Article One</a> </li>
+        <li><a href="/ui/article-two.html">Article Two</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
