--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -54,7 +54,7 @@
     </div>
     <div class="navbar-collapse collapse" id="myNavbar" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav">
-        <li><a href="active">About</a></li>
+        <li><a href="/">Article One</a> </li>
         <li class="active"><a href="/ui/article-two">Article Two</a> </li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
